Bug 1239066: [ffmpeg] Add support for YUV444P pixel format in FFmpeg. r=gerald

We also prefer YUV444 format when the decoder supports it.